<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pause_menu" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20sp"
                android:text="@string/soundOn"
                android:textColor="#000000"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/chkSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sound"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblVibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20sp"
                android:text="@string/vibrationOn"
                android:textColor="#000000"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/chkVibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vibration"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30sp"
                android:background="@null"
                android:text="@string/btnSave"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btnCancel"
                android:textSize="25sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>